# Forschungsarbeit

./: README.md
build1/: .catkin_tools.yaml
build1/catkin_tools_prebuild/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
build1/catkin_tools_prebuild/atomic_configure/: .rosinstall.LRlpt  local_setup.fish.iMo4J  local_setup.sh.aYFoC  setup.fish.3FFcW  setup.sh.OSWS4
build1/catkin_tools_prebuild/catkin_generated/: generate_cached_setup.py  setup_cached.sh  (+2 more)
build1/realsense2_camera/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
build1/realsense2_description/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
devel/: .catkin  setup.fish
devel1/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.fish  local_setup.sh  local_setup.zsh  setup.bash  setup.fish  setup.sh  setup.zsh
src/calib_scripts/: color_detection.py  final_pick_place.py  hand_eye.py  handeye_calibration.py  multi_color_detection.py  multicolor_pickplace.py  pickplace.py  pixel_to_3dpose.py  pp.py  read_npz.py
src/main_task/: CMakeLists.txt  README.md  link.txt  setup.py
src/panda_spacemouse_teleop/: CMakeLists.txt  README.md  package.xml
src/panda_spacemouse_teleop/config/: teleop.yaml
src/panda_spacemouse_teleop/launch/: spacemouse_franka_cartesian_impedance.launch  spacemouse_franka_cartesian_velocity.launch  spacemouse_teleop.launch
src/panda_spacemouse_teleop/scripts/: spacemouse_twist_node.py
src/realsense-ros/: readme_d400e.md
(+652 files in other folders)
