<?xml version="1.0"?>
<package format="2">
  <name>panda_spacemouse_teleop</name>
  <version>0.1.0</version>
  <description>ROS1 bridge from 3Dconnexion SpaceMouse (pyspacemouse) to geometry_msgs/Twist for Franka Panda teleoperation.</description>

  <maintainer email="user@example.com">Workspace User</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>franka_msgs</depend>

  <export/>
</package>
